fix image width

--- a/recipes/garlic_fried_rice.html
+++ b/recipes/garlic_fried_rice.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <h1>Garlic Fried Rice</h1>
-        <img src="../images/garlic_fried_rice.jpg" alt="image of a plate of bright fried rice on a colourful table top width="640"> 
+        <img src="../images/garlic_fried_rice.jpg" alt="image of a plate of bright fried rice on a colourful table top" width="640"> 
         <h2>Description</h2>
         <p>A simple stir fry that anyone can cook up using common asian household ingredients</p>
         <h2>Ingredients</h2>
